chore: update env template

--- a/.env.template
+++ b/.env.template
@@ -7,7 +7,16 @@ DB_USERNAME=
 DB_PASSWORD=
 DB_ROOT_PASSWORD=
 
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM=
+MAIL_FROM_NAME=
+
 REDIS_HOST=
 REDIS_PORT=
 
 JWT_SECRET=
+
+ALLOWED_ORIGIN=
